# matlab-lsp

./: Cargo.toml  README.md  build.rs  flake.nix
src/: args.rs  formatter.rs  global_state.rs  main.rs  parsed_code.rs  parsed_file.rs  session_state.rs  types.rs  utils.rs
src/analysis/: completion.rs  defref.rs  diagnostics.rs  hover.rs  mod.rs  references.rs  semantic.rs
src/extractors/: fast.rs  full.rs  mod.rs  symbols.rs
src/features/: completion.rs  formatter.rs  hover.rs  mod.rs  references.rs  semantic.rs
src/handlers/: mod.rs  notifications.rs  requests.rs
src/impls/: mod.rs  parsed_file.rs  range.rs
src/queries/: defref.scm  semantic.scm
src/threads/: background_worker.rs  db.rs  dispatcher.rs  handler.rs  mod.rs
