[package]
name = "matlab-lsp"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
atomic_refcell = "0.1.13"
chardetng = "0.1.17"
clap = { version = "4.5.51", features = ["derive", "env"] }
crossbeam-channel = "0.5.15"
encoding_rs = "0.8.35"
itertools = "0.14.0"
log = { version = "0.4.28", features = ["max_level_debug", "release_max_level_warn"] }
lsp-server = "0.7.9"
lsp-types = "=0.94"
matlab_beautifier = { git = "https://github.com/acristoffers/matlab-beautifier" }
process_alive = "0.2.0"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.145"
simplelog = "0.12.2"
streaming-iterator = { version = "0.1.9", features = ["std"] }
tree-sitter = ">=0.21.0"
tree-sitter-matlab = { git = "https://github.com/acristoffers/tree-sitter-matlab" }
xdg = "3.0.0"

[build-dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
clap_complete = "4.5.60"
clap_mangen = "0.2.31"
fs_extra = "1.3.0"

[[bin]]
name = "matlab-lsp"
path = "src/main.rs"
